<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MorePage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/tabbar3"
                android:gravity="center"
                android:text="@string/mr1"
                android:textColor="#FFD600"
                android:textSize="25dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv1"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/mr2"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/tv2"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/mr3"
                android:textColor="#FFD600"
                android:textSize="25dp"
                android:textStyle="bold"
                android:background="@drawable/tabbar3"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv3"
                android:text="@string/mr4"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp" />

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/tv4"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/mr5"
                android:textColor="#FFD600"
                android:textSize="25dp"
                android:textStyle="bold"
                android:background="@drawable/tabbar3"
                android:gravity="center" />

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mr6"
                android:layout_below="@id/tv5"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"/>

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:text="@string/mr7"
                android:layout_below="@id/tv6"
                android:textStyle="bold"
                android:textColor="#FFD600"
                android:textSize="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/tabbar3"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mr8"
                android:layout_below="@id/tv7"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="30dp"/>

    <TextView
        android:id="@+id/btnM"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="QUAY LẠI TRANG CHỦ"
        android:textColor="#FFD600"
        android:textSize="20dp"
        android:textStyle="bold"
        android:contentDescription="@string/back_button"
        android:layout_below="@id/tv8"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/tabbar1"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>