<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".AboutPage">

    <ImageView
        android:id="@+id/img1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/customborder"
        android:src="@drawable/banner3"
        android:scaleType="fitXY"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"/>


    <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent">

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent">


              <TextView
                  android:id="@+id/t1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/ab1"
                  android:layout_marginTop="20dp"
                  android:layout_marginHorizontal="20dp"
                  android:textStyle="bold"
                  android:textSize="20dp"
                  android:textColor="#FFD600"/>

              <TextView
                  android:id="@+id/t2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/t1"
                  android:layout_marginHorizontal="30dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/ab2"
                  android:textColor="@color/white"
                  android:textSize="18dp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/t3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/t2"
                  android:layout_marginHorizontal="20dp"
                  android:layout_marginTop="20dp"
                  android:text="@string/ab3"
                  android:textColor="#FFD600"
                  android:textSize="20dp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/t4"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/t3"
                  android:layout_marginHorizontal="30dp"
                  android:layout_marginTop="10dp"
                  android:text="@string/ab4"
                  android:textColor="@color/white"
                  android:textSize="18dp"
                  android:textStyle="bold" />

              <TextView
                  android:id="@+id/btnA"
                  android:layout_width="match_parent"
                  android:layout_height="50dp"
                  android:layout_below="@+id/t4"
                  android:layout_marginHorizontal="15dp"
                  android:layout_marginTop="15dp"
                  android:layout_marginBottom="15dp"
                  android:background="@drawable/tabbar1"
                  android:contentDescription="@string/back_button"
                  android:gravity="center"
                  android:text="QUAY LẠI TRANG CHỦ"
                  android:textColor="#FFD600"
                  android:textSize="20dp"
                  android:textStyle="bold" />

          </RelativeLayout>
      </androidx.core.widget.NestedScrollView>
</LinearLayout>